--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ email: mmeyer@ovrdc.org
 description: Explore Southern Ohio's Amazing Bikeways, Hiking, Bridle & and Mountain Bike Trails
 about: Explore Southern Ohio's Amazing Bikeways, Hiking & Bridle Trails, and Mountain Bike Trails
 
-baseurl: "https://ovrdc.github.io/trails-portal/" # the subpath of your site, e.g. /blog/ (If you use organization leave empty)
-url: "https://ovrdc.github.io/trails-portal/" #https://jekynewage.github.io" # the base hostname & protocol for your site
+baseurl: "https://ovrdc.github.io/trails-portal" # the subpath of your site, e.g. /blog/ (If you use organization leave empty)
+url: "https://ovrdc.github.io/trails-portal" #https://jekynewage.github.io" # the base hostname & protocol for your site
 
 google_analytics: ""
 addthis_id:
