--- a/_data/schema.ini
+++ b/_data/schema.ini
@@ -4,55 +4,30 @@ ColNameHeader=True
 Col1=OBJECTID Long
 Col2=Status Text Width 254
 Col3=Name Text Width 254
-Col4=OBJECTID_1 Long
-Col5=LocName Text Width 254
-Col6=Type Text Width 254
-Col7=Material Text Width 254
-Col8=Width Double
-Col9=Condition Text Width 50
-Col10=YearBuilt Long
-Col11=YearResurf Long
-Col12=B_Lat Double
-Col13=B_Long Double
-Col14=E_Lat Double
-Col15=E_Long Double
-Col16=Signed Text Width 10
-Col17=Pavmnt_Mrk Text Width 10
-Col18=LgMi Double
-Col19=ABBV Text Width 254
-Col20=TOWNSHIP_N Text Width 20
-Col21=COUNTY_COD Text Width 3
-Col22=ODOT_DISTR Double
-Col23=J Text Width 50
-Col24=CORPORATIO Text Width 25
-Col25=MPO_CODE Text Width 9
-Col26=IDENT Text Width 50
-Col27=County Text Width 50
-Col28=Created_By Text Width 100
-Col29=Mapped_By Text Width 100
-Col30=Cost Double
-Col31=STREET_NAME_TXT Text Width 50
-Col32=STREET_SUFFIX Text Width 50
-Col33=Notes Text Width 254
-Col34=Description Text Width 254
-Col35=NLF_ID Text Width 50
-Col36=Funder Text Width 254
-Col37=layout Text Width 20
-Col38=img Text Width 254
-Col39=center Text Width 50
-Col40=centerx Double
-Col41=centery Double
-Col42=gpx Text Width 254
-Col43=area Text Width 254
-Col44=cities Text Width 254
-Col45=counties Text Width 254
-Col46=length Text Width 10
-Col47=surface Text Width 254
-Col48=zoom Text Width 2
-Col49=csv Text Width 254
-Col50=website Text Width 254
-Col51=maptype Text Width 254
-Col52=subtype Text Width 254
-Col53=popup Text Width 254
-Col54=Shape_Length Double
-Col55=subtitle Text Width 254
+Col4=SUM_LengthMi Double
+Col5=OBJECTID_1 Long
+Col6=Status_1 Text Width 254
+Col7=Name_1 Text Width 254
+Col8=Type Text Width 254
+Col9=Material Text Width 254
+Col10=Condition Text Width 50
+Col11=Notes Text Width 254
+Col12=layout Text Width 20
+Col13=img Text Width 254
+Col14=center Text Width 50
+Col15=centerx Double
+Col16=centery Double
+Col17=gpx Text Width 254
+Col18=area Text Width 254
+Col19=cities Text Width 254
+Col20=counties Text Width 254
+Col21=length Text Width 10
+Col22=surface Text Width 254
+Col23=zoom Text Width 2
+Col24=csv Text Width 254
+Col25=website Text Width 254
+Col26=maptype Text Width 254
+Col27=subtype Text Width 254
+Col28=popup Text Width 254
+Col29=subtitle Text Width 254
+Col30=Shape_Length Double
