--- a/_data/trail-images.yml
+++ b/_data/trail-images.yml
@@ -1,11 +1,8 @@
 - img: adena-trail-01.jpg
   name: Adena Heritage Trail
   caption: Tri-County Triangle Trail offers great scenery and places to rest along the trail.
-- img: adena-trail-01.jpg
-  name: Adena Heritage Trail
-  caption: Tri-County Triangle Trail offers great scenery and places to rest along the trail.
-- img: adena-trail-01.jpg
-  name: Adena Heritage Trail
+- img: gallia-hike-bike-01.jpg
+  name: Gallia County Hike and Bike Trail - Holzer Clinic Trail
   caption: Tri-County Triangle Trail offers great scenery and places to rest along the trail.
 - img: adena-trail-01.jpg
   name: Adena Heritage Trail
