--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,3 @@
-# To Do List
-todolist:
-  - name: Add labels along trails in the map
-  - name: Fix search link on the large map
-  - name: Switch to another theme, possibly NOW UI Kit or Material Kit
-  - name: Add trail background image on header
-    done: true
-  - name: Add list sidebar to large map page
-  - name: Add related trails to trails details page
-  - name: Legend on map
-    done: true
-  - name: add all pois
-    priority: high
-## Resouces - referred to as links
-links:
-  - name: BackpackOhio
-    description: BackpackOhio offers information on overnight hikes in the Buckeye State.
-    url: http://www.backpackohio.com/
-  - name: RideWithGPS
-    description: Cycling GPS tracking mobile app and website, built on the freemium model, with publicly available GPX downloads.
-    url: https://ridewithgps.com/
-  - name: Strava
-    description: Recreation activity tracking platform built on the freemium model with an eye towards social sharing and competition.
-    url: https://www.strava.com/
-  - name: Ohio Bikeways
-    url: http://www.bikeways.net
-  - name: Miami Valley Trails
-  - name: MORPC Trail Map
-  - name: Mountain Bike Trails MTB Project
-  - name: Athens Bicycle
-  - name: CyclePath
-  - name: ...
-
 # Site settings
 title: Southern Ohio Trails
 logo:
@@ -40,12 +7,12 @@ about: Explore Southern Ohio's Amazing Bikeways, Hiking, Backpacking & Mountain 
 header-img: map-header-gray.jpg
 baseurl: "" # the subpath of your site, e.g. /blog/ (If you use organization leave empty)
 #url: "http://trails.ovrdc.org" #https://jekynewage.github.io" # the base hostname & protocol for your site
-url: "https://sohiotrails.surge.sh"
+url: "https://www.sohiotrails.org"
 about: >-
   The Southern Ohio Trails site exists to promote Active Transportation and outdoor exploration in Southern Ohio. It is funded in part by the Ohio Department or Transportation, the Appalachian Regional Commission, the Economic Development Services Agency and OVRDC members.
-
+  <br><br>
   The OVRDC portion of the code for this site is in public domain and can be found on <a href="https://github.com/ovrdc/trails-portal" target="_blank">GitHub</a>.
-
+  <br><br>
   For more information, please use the contact form on the <a href="http://www.ovrdc.org/contact" target="_blank">OVRDC website</a> and use the subject 'Trail Map', or file an issue on GitHub.
 
 google_analytics: ""
@@ -118,32 +85,52 @@ retinamagick:
   small1:
     source: /assets/img/homepage-images
     destination: /assets/img/homepage-images/small
-    scale: "320x214"
+    scale: "320x214^"
+    interlace: "Plane"
+    crop: "320x214-0x0"
+    interlace: "Plane"
+    quality: 50
 
   medium1:
     source: /assets/img/homepage-images
     destination: /assets/img/homepage-images/medium
-    scale: "480x320"
-    quality: "10"
+    scale: "480x320^"
+    crop: "480x320-0x0"
+    interlace: "Plane"
+    quality: 50
 
   large1:
     source: /assets/img/homepage-images
     destination: /assets/img/homepage-images/large
-    scale: "1920x1280"
+    scale: "1920x1280^"
+    crop: "1920x1280-0x0"
+    interlace: "Plane"
+    quality: 50
 
   small2:
     source: /_trails/images
     destination: /trails/images/small
-    scale: "320x214"
+    scale: "320x214^"
+    crop: "320x214-0x0"
+    interlace: "Plane"
+    quality: 50
+
 
   medium2:
     source: /_trails/images
     destination: /trails/images/medium
-    scale: "960x640"
+    scale: "640x426^"
+    crop: "640x426-0x0"
+    interlace: "Plane"
+    quality: 50
 
   large2:
     source: /_trails/images
     destination: /trails/images/large
-    scale: "1920x1280"
+    scale: "1920x1280^"
+    crop: "1920x1280-0x0"
+    interlace: "Plane"
+    quality: 50
+
 
 #sample images provided by pixbay
