--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -25,3 +25,6 @@
 - name: Cycle Path
   url: http://athenscyclepath.com/
   description: Bicycle shop in Athens, Ohio with links to a vareity of mountain and road biking maps for the Athens area. They are the creators of the iconic Athens Bicycle Map freely available throughout Athens.
+- name: Hiking Project
+  url: https://www.hikingproject.com/directory/8009750/southwest-ohio
+  description: Similar to the MTB Project (described below), the Hiking Project - "Better Data. Better Maps. Better Hikes." - is a user-generated index of hiking trails throughout the world. The site has trail details, trail guides and more. There are 34 featured hikes in Ohio with a total of 301 trails listed for Ohio.
