--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Southern Ohio Trails
 logo:
 email: mmeyer@ovrdc.org
-description: Explore Southern Ohio's Amazing Bikeways, Hiking, Bridle & and Mountain Bike Trails
+description: Explore Southern Ohio's Amazing Bikeways, Hiking & Mountain Bike Trails
 about: Explore Southern Ohio's Amazing Bikeways, Hiking, Backpacking & Mountain Bike Trails
 header-img: map-header-gray.jpg
 baseurl: "" # the subpath of your site, e.g. /blog/ (If you use organization leave empty)
