--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -28,3 +28,6 @@
 - name: Hiking Project
   url: https://www.hikingproject.com/directory/8009750/southwest-ohio
   description: Similar to the MTB Project (described below), the Hiking Project - "Better Data. Better Maps. Better Hikes." - is a user-generated index of hiking trails throughout the world. The site has trail details, trail guides and more. There are 34 featured hikes in Ohio with a total of 301 trails listed for Ohio.
+- name: Natural Ohio Adventures
+  description: This website features amazing images of waterfalls, parks and overlooks from across Ohio and surrounding states. You can follow their feed on instagram <a href="https://www.instagram.com/naturalohio/?hl=en">@naturalohio</a>.
+  url: http://www.naturalohioadventures.com/home.html
