--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,4 +15,10 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "img", widget: "image"}
+      - name: author
+        label: Author
+        widget: relation
+        collection: authors
+        searchFields: [name,organization]
+        valueField: name
       - {label: "Body", name: "body", widget: "markdown"}
