--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,10 +15,6 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "img", widget: "image"}
-      - name: author
-        label: Author
-        widget: relation
-        collection: authors
-        searchFields: [name,organization]
-        valueField: name
+      - {label: "Author", name:"author",widget:"select",options:["Malcolm Meyer","Nick Kroncke"]}
+      - {label: "Organization",name:"organization",widget:"select",options:["OVRDC", "CONNEX"]}
       - {label: "Body", name: "body", widget: "markdown"}
